# unittesting-benchmarking

./: .gitignore  CMakeLists.txt  readme.md
BENCHMARK/: CMakeLists.txt  benchmark.cpp
include/: codility.h
src/: CMakeLists.txt  codility.cpp  main.cpp
unittest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unittest.cpp
