cmake_minimum_required(VERSION 3.16)
project(GTEST)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
enable_testing()
include_directories( /home/hamna/Desktop/myproject/benchmarking_unittesting/include)
add_executable(gtest_exe /home/hamna/Desktop/myproject/benchmarking_unittesting/unittest/unittest.cpp)
target_link_libraries(gtest_exe GTest::gtest_main ${CMAKE_BINARY_DIR}/src/libcod_library.a )
add_test(NAME unit_test COMMAND gtest_exe )